[gd_scene load_steps=8 format=3 uid="uid://cae68vnysdgvn"]

[ext_resource type="PackedScene" uid="uid://v7dvu4kda1hq" path="res://scenes/player.tscn" id="1_bumgh"]
[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_o1bjq"]
[ext_resource type="PackedScene" uid="uid://1riewc63tyd7" path="res://scenes/start.tscn" id="2_5mp6n"]
[ext_resource type="PackedScene" uid="uid://dgguxfbdxk5dh" path="res://scenes/tile_map_2.tscn" id="2_ejvfd"]
[ext_resource type="PackedScene" uid="uid://dbmjrxxkr7xn8" path="res://scenes/deathzone.tscn" id="3_21o4j"]
[ext_resource type="PackedScene" uid="uid://cp0cjo8mutb8n" path="res://scenes/background.tscn" id="4_rgtqx"]
[ext_resource type="PackedScene" uid="uid://did5wo5i1j6vv" path="res://scenes/exit_area.tscn" id="7_ql5fm"]

[node name="Level_2" type="Node2D"]
script = ExtResource("1_o1bjq")

[node name="Start" parent="." instance=ExtResource("2_5mp6n")]
position = Vector2(-1, 24)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="Player" parent="." instance=ExtResource("1_bumgh")]

[node name="TileMap2" parent="." instance=ExtResource("2_ejvfd")]
position = Vector2(63, 72)

[node name="Deathzone" parent="." instance=ExtResource("3_21o4j")]
position = Vector2(-2, 160)
scale = Vector2(31.08, 1)

[node name="Background" parent="." instance=ExtResource("4_rgtqx")]

[node name="ExitArea" parent="." instance=ExtResource("7_ql5fm")]
position = Vector2(451, 39)
